--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,7 +1,6 @@
 ---
 output:
   html_document:
-    css: greta.css
     theme: lumen
     highlight: default
     toc: false
@@ -45,12 +44,6 @@ a, a:hover{
   padding-bottom: 25px;
   padding-left: 25px;
   padding-right: 25px;
-}
-#head {
-  background: #B797D7 url(greta-header.png) 0 45% / cover no-repeat;
-  box-shadow: 0 3px 10px 0 rgba(0,0,0,0.2);
-  max-width: 100%;
-  margin: 0 auto;
 }
 #header-content {
   max-width: 100%;
@@ -101,21 +94,11 @@ a, a:hover{
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, cache = TRUE)
-set.seed(2018-02-17)
+set.seed(2018-06-05)
 ```
 
-<div id="head">
-<p></p>
-<div id="header-content" class="container">
-
 <div class="row">
-
-<img id="main-icon" src="main-icon.png" />
-
-</div>
-
-<div class="row">
-<p id="main-icon-text">simple and scalable statistical modelling in R</p>
+<p id="main-icon-text">trophic models of ecosystem energetics in R</p>
 </div>
     
 </div>
@@ -133,19 +116,19 @@ set.seed(2018-02-17)
 <div class="col-md-4">
   <p class="bullet"><b>simple</b></p>
   <br>
-  greta models are written right in R, so there's no need to learn another language like BUGS or Stan
+  models in trophic are modular and capture energy flows through food webs
 </div>
 
 <div class="col-md-4">
   <p class="bullet"><b>scalable</b></p>
   <br>
-  greta uses [Google TensorFlow](https://www.tensorflow.org/) so it's fast even on massive datasets, and runs on CPU clusters and GPUs
+  trophic can run multiple scenarios in parallel
 </div>
 
 <div class="col-md-4">
   <p class="bullet"><b>extensible</b></p>
   <br>
-  it's easy to write your own R functions, modules, and even packages using greta
+  it's easy to develop your own modules to alter key components of trophic dynamics
 </div>
 
 </div>
@@ -171,25 +154,11 @@ set.seed(2018-02-17)
 
 <div class="col-md-1"></div>
 
-<div class="col-md-5">
-&thinsp; <span class="fa fa-arrow-circle-right fa-2x" style="vertical-align:middle;"></span>&emsp; [get started](get_started.html)
-</div>
-
-</div>
-
 <div class="row">
 
 <div class="col-md-1"></div>
 
-<div class="col-md-5">
-  &thinsp; <span class="fa fa-file-code-o fa-2x" style="vertical-align:middle;"></span> &emsp; [example models](example_models.html)
-</div>
-
 <div class="col-md-1"></div>
-
-<div class="col-md-5">
-  &thinsp; <span class="fa fa-book fa-2x" style="vertical-align:middle;"></span> &emsp; [package docs](reference-index.html)
-</div>
 
 </div>
 
@@ -213,49 +182,39 @@ set.seed(2018-02-17)
 
 <div class="col-md-6">
 
-Here's a Bayesian linear regression model for the `iris` data using greta:
+Here's a simple example with the `mdb` food web included in trophic:
 
 ```
-x <- iris$Petal.Length
-y <- iris$Sepal.Length
 ```
 ```
-library(greta)
+library(trophic)
 
-int <- normal(0, 5)
-coef <- normal(0, 3)
-sd <- lognormal(0, 3)
+food_web <- data(mdb)
 
-mean <- int + coef * x
-distribution(y) <- normal(mean, sd)
+food_web_object <- build_food_web(food_web)
+plot(food_web_object)
 ```
 ```
-m <- model(int, coef, sd)
+trophic_object <- build_trophic_dynamics(food_web_object)
 ```
 </div>
 <div class="col-md-6">
 ```
-draws <- mcmc(m, n_samples = 1000, chains = 3)
-bayesplot::mcmc_trace(draws)
+production_estimates <- estimate_production(trophic_object)
+
 ```
-```{r vis, echo = FALSE, eval = TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=4, fig.width=6, fig.align="center"}
+```{r vis, echo=FALSE, eval=TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=4, fig.width=6, fig.align="center"}
 
-x <- iris$Petal.Length
-y <- iris$Sepal.Length
+library(trophic)
 
-library(greta)
+food_web <- data(mdb)
 
-int <- normal(0, 5)
-coef <- normal(0, 3)
-sd <- lognormal(0, 3)
+food_web_object <- build_food_web(food_web)
+plot(food_web_object)
 
-mean <- int + coef * x
-distribution(y) <- normal(mean, sd)
+trophic_object <- build_trophic_dynamics(food_web_object)
 
-m <- model(int, coef, sd)
-
-draws <- mcmc(m, warmup = 1000, n_samples = 1000, chains = 3)
-bayesplot::mcmc_trace(draws, facet_args = list(nrow = 3, ncol = 1)) + ggplot2::theme_minimal()
+production_estimates <- estimate_production(trophic_object)
 ```
 
 </div>
