update website docs

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -12,8 +12,8 @@ body{
 }
 pre, pre:not([class]){
   font-size: 18px;
-  color: #5a3a78;
-  background-color: #f7f7f7;
+  color: #8F2469FF;
+  background-color: #FCFFA4FF;
   border: none;
 }
 .container-fluid {
@@ -26,16 +26,16 @@ pre, pre:not([class]){
     margin-right: 0;
 }
 .bullet{
-  color:#8960B3;
+  color:#8F2469FF;
   font-size: 36px;
 }
 .resource,
 .resource > p{
-  color: #8960B3;
+  color: #8F2469FF;
   font-size: 32px;
 }
 a, a:hover{
-  color: #8960B3;
+  color: #8F2469FF;
 }
 .col-md-4,
 .col-md-5,
@@ -61,14 +61,14 @@ a, a:hover{
   padding-top: 45px;
 }
 #main-icon-text{
-  color:#ffffff;
+  color:#8F2469FF;
   font-size: 24px;
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
 }
 #panel1 {
-  background-color: #f7f7f7;
+  background-color: #FCFFA4FF;
   box-shadow: 0 0 7px 2px rgba(0,0,0,0.1);
   max-width: 90%;
   margin: 0 auto;
@@ -154,11 +154,17 @@ set.seed(2018-06-05)
 
 <br><br>
 
-<h1 style="color: #8960B3;">basic example</h1>
+<h1 style="color: #8F2469FF;">basic example</h1>
 
 <div class="row">
 
+</div>
+</div>
+
 Here's a simple example with the example food web included in trophic:
+
+</div>
+</div>
 
 ```
 ```
