update website docs

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -173,11 +173,13 @@ library(trophic)
 
 food_web_object <- build_food_web(interaction_matrix = food_web)
 
-efficiency_object <- build_efficiency_matrix(efficiency_mean = efficiency_mean, efficiency_sd = 0.01)
+efficiency_object <- build_efficiency_matrix(efficiency_mean = efficiency_mean,
+                                             efficiency_sd = 0.01)
 
 dominance_object <- build_dominance_matrix(dominance = dominance_matrix)
 
-primary_producers_example <- build_primary_producers(production_mean = production_mean, production_sd = production_sd)
+primary_producers_example <- build_primary_producers(production_mean = production_mean,
+                                                     production_sd = production_sd)
 
 trophic_dynamics_object <- build_trophic_dynamics(food_web = food_web_object,
                                                   efficiency_matrix = efficiency_object,
