update relative links in website docs

--- a/docs/examples.Rmd
+++ b/docs/examples.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = FALSE, cache = TRUE)
 set.seed(2018-06-05)
 ```
 
-The `trophic` package has several different uses. These are some examples of possible use cases. Please feel free to contribute your own additions (see [here](docs/contribute.html) for details).
+The `trophic` package has several different uses. These are some examples of possible use cases. Please feel free to contribute your own additions (see [here](contribute.html) for details).
 
 ## example: predicting biomass of a high-order predator with known food web
 ```{r results="hide", warning=FALSE, error=FALSE, fig.width=10}  
