--- a/docs/examples.Rmd
+++ b/docs/examples.Rmd
@@ -7,7 +7,7 @@ output:
 ---
   
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, cache = TRUE)
+knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 set.seed(2018-06-05)
 ```
 
@@ -16,7 +16,39 @@ The `trophic` package has several different uses. These are some examples of pos
 ## example: predicting biomass of a high-order predator with known food web
 ```{r results="hide", warning=FALSE, error=FALSE, fig.width=10}  
 
-# do something
+# load trophic package
+library(trophic)
+
+# prepare food web, transfer efficiencies, and dominance matrix
+example_fw <- build_food_web(interaction_matrix = food_web)
+example_eps <- build_efficiency_matrix(efficiency_mean = efficiency_mean,
+                                       efficiency_sd = 0.05)
+example_doms <- build_dominance_matrix(dominance = dominance_matrix)
+
+# build primary producers object
+example_pp <- build_primary_producers(production_mean = production_mean,
+                                      production_sd = production_sd)
+
+# collate trophic_dynamics object
+example_trophic <- build_trophic_dynamics(food_web = example_fw,
+                                          efficiency_matrix = example_eps,
+                                          dominance_matrix = example_doms)
+
+# predict production of all nodes
+predicted_production <- estimate_production(trophic_dynamics = example_trophic,
+                                            primary_producers = example_pp,
+                                            stochastic = c("efficiency",
+                                                           "primary_production"))
+
+# create a P:B ratio object to link production to biomass
+example_pb <- build_pb_ratio(range = c(0.25, 5.75), type = "fixed")
+
+# use P:B ratio to estimate biomass from production
+predicted_biomass <- estimate_biomass(production_estimates = predicted_production,
+                                      pb_ratio = example_pb)
+
+# plot biomass for nodes of interest
+plot(predicted_biomass, nodes = c(16:19))
 
 ```
 
